# facere

backend/: .gitignore  Cargo.toml  README.md
backend/migrations/2023-04-12-141224_create_users/: up.sql
backend/src/: main.rs  schema.rs
backend/src/database/: mod.rs
backend/src/database/models/: user_model.rs
backend/src/service/: mod.rs  user_service.rs
