[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
diesel = { version = "2.0.0", features = ["chrono", "postgres", "uuid", "r2d2"] }
dotenvy = "0.15"
actix = "0.13.0"
actix-web = "4"
env_logger = "0.10.0"

